ingress-conf/ingress.yaml
apiVersion: networking.k8s.io/v1  
kind: Ingress
metadata:  
  name: golang-ep 
  annotations:
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: golang.k8s.local
      http:
        paths:
        - pathType: Prefix
          path: /id
          backend:
            service:
              name: golang-ext-svc
              port:
                number: 8080
